syntax = "proto3";
package invoicing;
option go_package = "./protos";

// Define the InvoicingService
service InvoicingService {
  rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse);
  rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse);
  rpc ReceivePayment(ReceivePaymentRequest) returns (ReceivePaymentResponse);
}

// Request and Response messages
message CreateInvoiceRequest {
  string invoice_number = 1;
  repeated string items = 2;
  string invoice_date = 3;
  string due_date = 4;
  double total_amount = 5;
  double tax_amount = 6;
  double grand_total = 7;
  string status = 8;
}

message CreateInvoiceResponse {
  string id = 1;
}

message GetInvoiceRequest {
  string id = 1;
}

message GetInvoiceResponse {
  Invoice invoice = 1;
}

message ReceivePaymentRequest {
  string invoice_id = 1;
  double amount = 2;
  string payment_date = 3;
}

message ReceivePaymentResponse {}

// Invoice and InvoiceItem messages
message Invoice {
  string id = 1;
  string invoice_number = 2;
  repeated string items = 3;
  string invoice_date = 4;
  string due_date = 5;
  double total_amount = 6;
  double tax_amount = 7;
  double grand_total = 8;
  string status = 9;
}
